--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <title> rosecakecakecake </title>
     <!--FONT--> 
+  <style>
+    body {font-family: 'Modak', cursive;
+      background-color: #ffe6f2;}
+    </style>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
   </head>
   <body>
-  <h1> It seems you are a mother. </h1>
+  <h1> It appears you are a mother. </h1>
   </body>
   </html>
