--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
   </head>
   <body>
-  <h1> It appears you are a mother. </h1>
+  <p> It appears you are a mother. </p>
   </body>
   </html>
