--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <!--FONT--> 
   <style>
     body {font-family: 'Modak', cursive;
-      background-color: #ffe6f2;}
+      background-color: #ffe6f2;
+    text-align: center;}
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
   </head>
