--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
   </head>
   <body> <p> HAPPY MOTHER'S DAY! </p>
-  <p-style="font-size: 150%"> It appears you are a mother. </p>
+  <p-style="font-size: 150%"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking. We are all very lucky to have you. Love u. </p>
   </body>
   </html>
