--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     body {font-family: 'Modak', cursive;
       background-color: #ffe6f2;
     text-align: center;}
+     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+    <!--FAVICON--> 
+    
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
   </head>
   <body> <p> HAPPY MOTHER'S DAY! </p>
   <p-style="font-size: 150%"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking. We are all very lucky to have you. Love u. </p>
