--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <title> rosecakecakecake </title>
     <!--FONT--> 
   <style>
@@ -10,10 +11,8 @@
     </style>     
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     <!--FAVICON--> 
-    
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
   </head>
   <body> <p> HAPPY MOTHER'S DAY! </p>
-  <p-style="font-size: 150%"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking. We are all very lucky to have you. Love u. </p>
+  <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking. We are all very lucky to have you. Love u. </p>
   </body>
   </html>
