--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     <!--FAVICON--> 
   </head>
-  <body> <p> HAPPY MOTHER'S DAY! </p>
+  <body> <p-style="font-size: 5vw"> HAPPY MOTHER'S DAY! </p>
   <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking. We are all very lucky to have you. Love u. </p>
   </body>
   </html>
