--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--FAVICON--> 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title> rosecakecakecake </title>
     <!--FONT--> 
@@ -10,9 +11,8 @@
     text-align: center;}
     </style>     
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
-    <!--FAVICON--> 
   </head>
   <body> <p-style="font-size: 5vw"> HAPPY MOTHER'S DAY! </p>
-  <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking. We are all very lucky to have you. Love u. </p>
+  <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking and making sure that we have dinner together as a family. We are all very lucky to have you. Love u. </p>
   </body>
   </html>
