--- a/index.html
+++ b/index.html
@@ -20,23 +20,29 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 4</div>
     <img src="pic1.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
+    <div class="numbertext">2 / 4</div>
+    <img src="pic2.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
+    <div class="numbertext">3 / 4</div>
+    <img src="pic3.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
+    <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
+    <img src="pic4.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+  
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
