--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     text-align: center;}
     </style>     
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+    <link href="pics.css" rel="stylesheet" type="text/css" />
   </head>
   <body> <p-style="font-size: 5vw"> HAPPY MOTHER'S DAY! </p>
   <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking and making sure that we have dinner together as a family. We are all very lucky to have you. Love u. </p>
@@ -55,5 +56,6 @@
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
 </div>
+    <script src"pics.js"></script>
   </body>
   </html>
