--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="pics.css" rel="stylesheet" type="text/css" />
   </head>
   <body> <p-style="font-size: 5vw"> HAPPY MOTHER'S DAY! </p>
-  <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking and making sure that we have dinner together as a family. We are all very lucky to have you. Love u. </p>
+  <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking and making sure that we have dinner together as a family. Your ability to accidentally and purposefully grow potatoes, green onions, ginger and more amazes us all. How do you grow plants so easily? We are all very lucky to have you. Love u. </p>
   
     <!-- Slideshow container -->
 <div class="slideshow-container">
