--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="pic1.jpg" style="width:100%">
+    <img src="pic1.JPG" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
-    <img src="pic2.jpg" style="width:100%">
+    <img src="pic2.JPG" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <img src="pic3.jpg" style="width:100%">
+    <img src="pic3.JPG" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
     <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <img src="pic4.jpg" style="width:100%">
+    <img src="pic4.JPG" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
