--- a/index.html
+++ b/index.html
@@ -11,52 +11,9 @@
     text-align: center;}
     </style>     
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
-    <link href="pics.css" rel="stylesheet" type="text/css" />
   </head>
   <body> <p-style="font-size: 5vw"> HAPPY MOTHER'S DAY! </p>
   <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking and making sure that we have dinner together as a family. Your ability to accidentally and purposefully grow potatoes, green onions, ginger and more amazes us all. How do you grow plants so easily? We are all very lucky to have you. Love u. </p>
-  
-    <!-- Slideshow container -->
-<div class="slideshow-container">
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 4</div>
-    <img src="pic1.JPG" style="width:50%">
-    <div class="text">Caption Text</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 4</div>
-    <img src="pic2.JPG" style="width:50%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 4</div>
-    <img src="pic3.JPG" style="width:50%">
-    <div class="text">Caption Three</div>
-  </div>
-
-    <div class="mySlides fade">
-    <div class="numbertext">4 / 4</div>
-    <img src="pic4.JPG" style="width:50%">
-    <div class="text">Caption Three</div>
-  </div>
-  
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-</div>
-    <script src"pics.js"></script>
+  <img src="pic1.JPG">
   </body>
   </html>
