--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
   <img src="pic2.jpg">
   <img src="pic3.jpg">
   <img src="pic4.jpg">
+  <img src="pic5.jpg">
+  <img src="pic6.jpg">
+  <img src="pic7.jpg">
+  <img src="pic8.jpg">
+  <img src="pic9.jpg">   
+  <img src="pic10.jpg">
   </body>
   </html>
