--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <body> <p-style="font-size: 5vw"> HAPPY MOTHER'S DAY! </p>
   <p-style="font-size: 5vw"> You are a mother. You gave birth to 巫晨薇 and 巫晨笛. Thank you for always cooking and making sure that we have dinner together as a family. Your ability to accidentally and purposefully grow potatoes, green onions, ginger and more amazes us all. How do you grow plants so easily? It's very impressive. We are all very lucky to have you. Love u. </p>
   <img src="pic1.JPG">
-  <img src="pic2.jpg">
-  <img src="pic3.jpg">
-  <img src="pic4.jpg">
-  <img src="pic5.jpg">
-  <img src="pic6.jpg">
-  <img src="pic7.jpg">
-  <img src="pic8.jpg">
-  <img src="pic9.jpg">   
+  <img src="pic2.JPG">
+  <img src="pic3.JPG">
+  <img src="pic4.JPG">
+  <img src="pic5.JPG">
+  <img src="pic6.JPG">
+  <img src="pic7.JPG">
+  <img src="pic8.JPG">
+  <img src="pic9.JPG">   
   </body>
   </html>
