--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   <img src="pic6.JPG">
   <img src="pic7.JPG">
   <img src="pic8.JPG">
-  <img src="pic9.JPG">   
+  <img src="pic9.jpg">   
   </body>
   </html>
